Implement parse from user uploaded sites urls file Add a couple files to gitignore and dockerignore Add CSRFProtect instance to flask app extentions Add MAX_CONTENT_LENGTH and UPLOADS folder path to app config Create file upload WTForm Modify parser.crawl function with file_path parameter Add parser aiohttp.ClientResposeError processing Add upload file route Add list user uploaded files route Modify parse_links route with file to parse argument Add get_user_uploads_folder util Create templates for listing and uploading files Add csrf_token to all html forms Minor templates changes

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -14,13 +14,14 @@
     <main>
         <header class="p-3 bg-dark text-white">
             <div class="container">
-                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-end">
                     {% if current_user.is_authenticated %}
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li><a href="{{ url_for('index') }}" class="nav-link px-2">Home</a></li>
-                        <li><a href="{{ url_for('links_user_specific', user_name=user.username) }}"
-                                class="nav-link px-2">{{ user.username }} sites</a></li>
-                        <li><a href="{{ url_for('parse_links') }}" class="nav-link px-2">Parse links</a></li>
+                        <li><a href="{{ url_for('links_user_specific', user_name=current_user.username) }}"
+                                class="nav-link px-2">Parsed by me</a></li>
+                        <li><a href="{{ url_for('upload_file') }}" class="nav-link px-2">Upload file</a></li>
+                        <li><a href="{{ url_for('list_user_files') }}" class="nav-link px-2">Files</a></li>
                     </ul>
                     {% endif %}
                     <div class="d-flex flex-row align-items-center justify-content-center">
