--- a/project/templates/links_list.html
+++ b/project/templates/links_list.html
@@ -35,7 +35,7 @@
     </table>
   </div>
   {% else %}
-  <h4 class="mt-3 text-center">No site in database yet(</h4>
+  <h4 class="mt-3 text-center">You haven't parsed any sites yet(</h4>
   {% endif %}
 </div>
 {% endblock content %}
