--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -5,6 +5,7 @@
 <div class="text-center mt-3 d-flex justify-content-center">
     <main class="form-signin">
         <form method="post" action="{{ url_for('login') }}">
+            {{ form.csrf_token }}
             <h1 class="h3 mb-3 fw-normal">Login</h1>
             {% include "./utils/messages.html" %}
             <div class="form-floating">
